test/fail/Imports/Bool.agda

module Imports.Bool where

data Bool : Set where
  true false : Bool
